Adicionado Recebimentos ao menu do financeiro

--- a/app/views/shared/_menu_financial.html.erb
+++ b/app/views/shared/_menu_financial.html.erb
@@ -1,1 +1,2 @@
-<%= link_to "Pagamentos", financeiro_index_path %> 
+<%= link_to "Pagamentos", financeiro_index_path %> |
+<%= link_to "Recebimentos", receipts_path %> | Relatórios
