--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -3,7 +3,7 @@
 <!-- / TITLE -->
 
 <div class="cursos">
-	<h1>Editar curso - <%= @course.name %></h1>
+	<h1>Editar - <%= @course.name %></h1>
 
 	<%= render 'form' %>
 </div>
