--- a/app/views/teams/planning.html.erb
+++ b/app/views/teams/planning.html.erb
@@ -25,7 +25,7 @@
 		</li>
 		<li>
 			<% if @meetings.size > 0 %>
-				<table width="990" border="1" bgcolor="#e7f3f9">
+				<table width="990" class='encontros'>
 					<tr>
 						<td valign="top">
 							<table width="200" id="guardaMeetings">
